# novascan

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/src/novascan/: __init__.py
backend/src/novascan/api/: __init__.py  app.py  categories.py  dashboard.py  receipts.py  transactions.py  upload.py
backend/src/novascan/auth/: __init__.py  post_confirmation.py  pre_signup.py
backend/tests/: conftest.py
backend/tests/integration/: test_pipeline_flow.py  test_security_pipeline_flow.py
backend/tests/unit/: test_bedrock_extract.py  test_categories.py  test_category_constants.py  test_dashboard.py  test_extraction_models.py  test_finalize.py  test_nova_structure.py  test_pipeline_results.py  test_ranking.py  test_receipt_crud.py  test_receipt_models.py  test_receipts_list.py  test_security_cursor.py  test_security_finalize.py  test_security_pipeline.py  test_security_prompt_injection.py  test_security_upload.py  test_textract_extract.py  test_transactions.py  test_upload.py
infra/: app.py  cdk.json  pyproject.toml
infra/cdk.out/: manifest.json  novascan-dev.assets.json  novascan-dev.metadata.json  novascan-dev.template.json  tree.json
infra/cdkconstructs/: api.py  auth.py  frontend.py  pipeline.py  storage.py
infra/scripts/: add_user.py  service.py
infra/stacks/: novascan_stack.py
infra/tests/: conftest.py  test_api_construct.py  test_auth_construct.py  test_frontend_construct.py  test_pipeline_construct.py  test_security_hardening.py  test_stack.py  test_storage_construct.py
infra/tests/snapshots/: novascan-dev.template.json
(+234 files in other folders)
